objects/InstallationObj__c.object
<CustomObject>
    <fields>
        <fullName>InstallationAccess__c</fullName>
        <label>InstallationAccess</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Write</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Change1</fullName>
                </value>
                <value>
                    <fullName>Change2</fullName>
                </value>
                <value>
                    <fullName>Change3</fullName>
                </value>
                <value>
                    <fullName>Change4</fullName>
                </value>
                <value>
                    <fullName>Prod</fullName>
                </value>
                <value>
                    <fullName>QA</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstallationType__c</fullName>
        <label>InstallationType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Local</fullName>
                </value>
                <value>
                    <fullName>Remote</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>InstallingVersion__c</fullName>
        <defaultValue>IF(20 = 20, &quot;20&quot;, &quot;20.1&quot;)</defaultValue>
        <description>InstallingVersion Desc</description>
        <inlineHelpText>Installing-Version</inlineHelpText>
        <label>InstallingVersion</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PickListReadOnly__c</fullName>
        <label>PickListReadOnly</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unable to select</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklIstField2__c</fullName>
        <label>PicklIstField2</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>one</fullName>
                </value>
                <value>
                    <fullName>two</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PicklIstFieldAlll4343434__c</fullName>
        <label>PicklIstFieldAlll4343434</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>safaf</fullName>
                </value>
                <value>
                    <fullName>asdff</fullName>
                </value>
                <value>
                    <fullName>sadfsa</fullName>
                </value>
                <value>
                    <fullName>ffsaf</fullName>
                </value>
                <value>
                    <fullName>asfsadf</fullName>
                </value>
                <value>
                    <fullName>asfdaffsad</fullName>
                </value>
                <value>
                    <fullName>asfffsad</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>InstallationObj</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>InstallationObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>InstallationObjs</pluralLabel>
    <recordTypes>
        <fullName>INRecord1234</fullName>
        <active>true</active>
        <label>INRecord1234</label>
    </recordTypes>
    <recordTypes>
        <fullName>Instr3</fullName>
        <active>true</active>
        <label>Instr3</label>
    </recordTypes>
    <recordTypes>
        <fullName>PickListField1RecordType1</fullName>
        <active>true</active>
        <label>PickListField1RecordType1</label>
    </recordTypes>
    <recordTypes>
        <fullName>instr1</fullName>
        <active>true</active>
        <label>instr1</label>
    </recordTypes>
    <recordTypes>
        <fullName>instr2All</fullName>
        <active>true</active>
        <label>instr2All</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>